objects/ProfitCenter__c.object
<CustomObject>
    <description>SFDC1-3837 Object to hold data for profit centers related to a product</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6128 to add Deactivate functionality</description>
        <inlineHelpText>Active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-3837 legacy Id field to hold lagacy system primary keys</description>
        <externalId>true</externalId>
        <inlineHelpText>Primary key from Legacy system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDProfitCenter__c</fullName>
        <description>SFDC1-3837 Primary key for Profit center object</description>
        <displayFormat>PC-{0000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Primary key auto calculated</inlineHelpText>
        <label>PKIDProfitCenter</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProfitCenterCode__c</fullName>
        <description>SFDC1-3837 Field to hold profit center code in alphanumeric format
SFDC-5732.  Field is updated to External and Unique</description>
        <externalId>true</externalId>
        <label>Profit Center Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SaleType__c</fullName>
        <description>SFDC1-6146: This field stores the Sales Type</description>
        <label>Sale Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onetime</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesBusinessLine__c</fullName>
        <description>SFDC1-6146: This field stores Sales Business Line type</description>
        <label>Sales Business Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upstream</fullName>
                </value>
                <value>
                    <fullName>EWP</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>OMD</fullName>
                </value>
                <value>
                    <fullName>PGCR</fullName>
                </value>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Maritime</fullName>
                </value>
                <value>
                    <fullName>ECR</fullName>
                </value>
                <value>
                    <fullName>Product Design</fullName>
                </value>
                <value>
                    <fullName>Energy Technical</fullName>
                </value>
                <value>
                    <fullName>TMT</fullName>
                </value>
                <value>
                    <fullName>RootMetrics</fullName>
                </value>
                <value>
                    <fullName>CARFAX</fullName>
                </value>
                <value>
                    <fullName>CarProof</fullName>
                </value>
                <value>
                    <fullName>OPIS</fullName>
                </value>
                <value>
                    <fullName>Auto MasterMind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesRevenueType__c</fullName>
        <description>SFDC1-6146: This field contains Sales Revenue Type</description>
        <label>Sales Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SW &amp; Svcs</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Transaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Profit Center</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Profit Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profit Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>